# CardGameGraphicsEngine

./: '  .gitignore  CMakeLists.txt  README.md
example/: TestCardDatabaseSingleton.cpp  TestCardDatabaseSingleton.h  TestCardInfo.cpp  TestCardInfo.h  TestGameMode.h  TestGameState.cpp  TestGameState.h  TestGameplayManager.cpp  TestGameplayManager.h  TestGameplayPhase.cpp  TestGameplayPhase.h  TestGameplayPiles.cpp  TestGameplayPiles.h  TestScene.cpp  TestScene.h  TestSceneData.h  TestUpdateInfo.h
example/ServerHandler/: ServerManager.cpp  ServerManager.h  WebSocketFrame.cpp  WebSocketFrame.h
include/: BoundButton.h  Card.h  CardDatabaseSingleton.h  CardGroup.h  CardGroupRenderer.h  CardItem.h  CardRenderingData.h  CursorData.h  ErrorHandling.h  ExpandableStackCardGroup.h  FannedCardGroup.h  FannedCardGroupRenderer.h  GameObject.h  GameScene.h  GameState.h  IndexBuffer.h  Material.h  MathHelper.h  MemoryLayout.h  RenderData.h  Renderer.h  Scene.h  SceneData.h  SceneObject.h  SceneSwapButton.h  Shader.h  SimpleButton.h  SimplePlane.h  SimpleRenderObject.h  StackedCardGroup.h  StackedCardGroupRenderer.h  Texture.h  TextureMap.h  VertexArray.h  VertexBuffer.h  WindowManager.h
include/CardGroup/: CardGroup.h  CardGroupRenderer.h  CardItem.h  ExpandableStackCardGroup.h  ExpandedStackCardGroupRenderer.h  FannedCardGroup.h  FannedCardGroupRenderer.h
include/HelperOpenGL/: VertexArray.h  VertexBuffer.h
include/SimpleRenderObjects/: BoundButton.h  SimpleButton.h  SimplePlane.h  SimpleRenderObject.h
include/shaders/: allShaders.h
src/: BoundButton.cpp  Card.cpp  Card.h  CardDatabaseSingleton.h  CardGroup.cpp  CardGroupRenderer.cpp  CardGroups.cpp  CardInfo.cpp  CardRenderingData.cpp  ErrorHandling.cpp  ErrorHandling.h  ExpandableStackCardGroup.cpp  FannedCardGroup.cpp  FannedCardGroupRenderer.cpp  GameObject.cpp  GameScene.cpp  GameState.cpp  GameState.h  IndexBuffer.cpp  Material.h  MathHelper.cpp  MemoryLayout.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.h  SceneSwapButton.cpp  Shader.cpp  SimpleButton.cpp  SimplePlane.cpp  SimpleRenderObject.cpp  StackedCardGroup.cpp  StackedCardGroupRenderer.cpp  Texture.cpp  TextureLRU.cpp  TextureLRU.h  TextureMap.cpp  VertexArray.cpp  VertexBuffer.cpp  (+3 more)
src/Card/: Card.cpp  Card.h  CardInfo.h
src/CardGroup/: CardGroup.cpp  CardGroup.h  CardGroupRenderer.cpp  CardGroupRenderer.h  CardItem.cpp  CardItem.h  CardRenderingData.cpp  CardRenderingData.h  ExpandableStackCardGroup.cpp  ExpandableStackCardGroup.h  ExpandedStackCardGroupRenderer.cpp  ExpandedStackCardGroupRenderer.h  FannedCardGroup.cpp  FannedCardGroup.h  FannedCardGroupRenderer.cpp  FannedCardGroupRenderer.h  StackedCardGroupRenderer.cpp  StackedCardGroupRenderer.h  TemporaryCardGroup.cpp  TemporaryCardGroup.h
src/Helper/: ErrorHandling.h
src/HelperOpenGL/: IndexBuffer.cpp  MemoryLayout.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
src/HelperRendering/: Renderer.cpp  Renderer.h  Shader.cpp  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureLRU.cpp  TextureLRU.h  TextureMap.cpp  TextureMap.h  WindowManager.cpp  WindowManager.h
src/Scene/: CommandPalette.cpp  CommandPalette.h  GameState.cpp  GameState.h  Scene.cpp  Scene.h  SceneObject.h
src/SimpleRenderObjects/: BoundButton.cpp  BoundButton.h  SimpleButton.cpp  SimpleButton.h  SimplePlane.cpp  SimplePlane.h  SimpleRenderObject.cpp  SimpleRenderObject.h  TextBox.cpp  TextBox.h
src/shaders/: BasicFragment.cpp  BasicVertex.cpp  CardFragment.cpp  CardVertex.cpp  HighlightedCardFragment.cpp  HighlightedCardVertex.cpp  SelectedCardFragment.cpp  TextureFragment.cpp  TextureVertex.cpp  allShaders.h
test/: TestTextureLRU.cpp  TestTextureLRU.h  main.cpp
